--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1> Coba Git</h1>
+    <p>bembeng</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa debitis culpa molestiae natus est sit consequatur nostrum, asperiores eaque tempora ex quae qui, ab perferendis suscipit illo dolor facilis numquam.</p>
 </body>
 </html>
